# message-sender

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  justfile  prek.toml  pyproject.toml
.github/: dependabot.yml  release_drafter_template.yml
.github/workflows/: pypi_publish.yml  testing.yml
message_sender/: __init__.py  _version.py  discord.py  google_chat.py
message_sender/email/: proton.py  smtp.py
tests/: test_discord.py  test_email_proton.py  test_email_smtp.py  test_google_chat.py
